--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,6 @@ body {
 	padding: 0;
 }
 
-/* Header */
 h1, h2 {
 	color: #2c3e50;
 }
@@ -47,4 +46,44 @@ section {
 	background-color: white;
 	border-radius: 8px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* General Table Styling */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  color: #333;
+}
+
+th {
+  background-color: #000; /* Negro */
+  color: #fff; /* Blanco */
+  padding: 12px;
+  text-align: center;
+}
+
+td {
+  background-color: #f4f4f4; /* Gris claro */
+  padding: 12px;
+  text-align: center;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9; /* Gris muy claro para filas pares */
+}
+
+tr:hover {
+  background-color: #e0e0e0; /* Gris medio al pasar el ratón */
+}
+
+td:first-child {
+  font-weight: bold;
+  color: #333; /* Gris oscuro */
+}
+
+td:nth-child(2) {
+  font-weight: bold;
+  color: #2980b9; /* Azul para resaltar el evento */
 }
